# DarexAI-Fashion-Assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  assistant.py  compatibility.py  config.py  data_loader.py  download_models.py  embedder.py  main.py  styling_config.json  vector_store.py
tests/: __init__.py  test_api.py  test_assistant.py  test_compatibility.py  test_data_loader.py  test_embedder.py  test_vector_store.py
workbooks/: Notebook.ipynb  eval_metrics.py
